@@ -3,6 +3,9 @@
 
 gli-dialog (5 Jul 2005):
 
+  6 Sep 2005; Preston Cody <codeman@gentoo.org>
+  coded make.conf advanced menus.
+
   4 Sep 2005; Preston Cody <codeman@gentoo.org>
   stupid fix for non-defined etc_files.  additional fix from agaffney
   
